etc/css/style.css
/* HTML element styling */

body {
  font-family: Inter, Helvetica, sans-serif;
  font-feature-settings: "liga" 0, "calt" 0;
  font-size: 14px;
  background-color: #000;
  color: #DDE0E6;
  margin: 0px;
}

input {
  -webkit-appearance: none; 
  -moz-appearance: none;
  outline: none;
  padding: 5px;
  padding-left: 7px;
  color: inherit;
  font-size: inherit;
  font-family: inherit;
}

textarea {
  -webkit-appearance: none; 
  -moz-appearance: none;
  outline: none;
  line-height: 18px;
  font-weight: 400;
}

pre, pre.span {
  font-size: inherit;
}

span {
  display: inline-flex;
}

pre span {
  display: inline;
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}

.clickable {
  cursor: pointer;
}

span.icon {
  display: inline-flex;
  position: relative;
  margin-left: 3px;
  margin-right: 3px;
}

span.icon > * {
  position: absolute;
  top: calc(50% - 9px);
  width: 18px;
  height: 18px;
  aspect-ratio: 1;
  opacity: 0.5;
}

span.icon::after {
  content: '';
  width: 18px;
}

span.icon div {
  transform: rotate(0deg);
  transition: 0.1s transform ease-out, 0.1s opacity ease-out;
}

span.icon-rotate div {
  transform: rotate(90deg);
}

span.icon-hide div {
  opacity: 0;
}

div.follow {
  background-image: url('../img/follow.png');
  background-size: contain;
  background-position: center center;
  padding-top: 2.5px;
  width: 12px !important;
  height: 12px !important;
  transform: rotate(315deg) !important;
}

div.connecting {
  background-image: url('../img/connecting.png');
  background-size: contain;
  background-position: center center;
  opacity: 0.9 !important;
}

div.connected {
  background-image: url('../img/connected.png');
  background-size: contain;
  background-position: center center;
  opacity: 0.9 !important;
}

div.error {
  background-image: url('../img/error.png');
  background-size: contain;
  background-position: center center;
  opacity: 0.9 !important;
}

div.search {
  background-image: url('../img/search.png');
  background-size: contain;
  background-position: center center;
}

div.nav {
  background-image: url('../img/nav-right.png');
  background-size: contain;
  background-position: center center;
}

div.close {
  background-image: url('../img/close.png');
  background-size: contain;
  background-position: center center;
}

/* High level layout */

div.top-box {
  position: absolute;
  top: 0px;
  width: 100%;
  height: 36px;
  background-color: #232833;
  border-color: rgba(0, 0, 0, 0.5);
  border-style: solid;
  border-width: 0px;
  border-bottom-width: 1px;
  padding-bottom: 4px;
}

div.top-content {
  display: flex;
  width: 100%;
  height: 100%;
  border-color: rgba(0, 0, 0, 0.5);
  border-style: solid;
  border-width: 0px;
  border-bottom-width: 1px;
  align-items: center;
  justify-content: center;
}

div.tree-box {
  position: absolute;
  top: 41px;
  left: 0px;
  width: 214px;
  height: calc(100vh - 41px);
  border-style: solid;
  border-width: 0px;
  border-left-color: #232833;
  border-left-width: 5px;
  border-right-color: #000;
  border-right-width: 1px;
}

div.app-box {
  display: flex;
  position: relative;
  top: 41px;
  left: 220px;
  width: calc(100% - 210px);
  height: calc(100vh - 141px);
}

div.left-column {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  height: 100%;
  overflow-x: auto;
}

div.right-column {
  display: flex;
  flex-direction: column;
  min-width: 400px;
  height: 100%;
  border-style: solid;
  border-width: 0px;
  border-left-width: 1px;
  border-color: #000;
  overflow-x: auto;
}

div.query-box {
  width: calc(100% - 30px);
}

div.terminal-box {
  background-color: #232833;
  border-color: #000;
  border-style: solid;
  border-width: 0px;
  border-top-width: 1px;

  position: absolute;
  width: calc(100% - 200px);
  height: 100px;
  left: 220px;
  bottom: 0px;
}

div.app-title {
  font-weight: 500;
}

span.app-title-detail {
  background-color: #250201;
  border-style: solid;
  border-width: 1px;
  border-radius: 10px;
  border-color: #EF8784;
  color: #EF8784;
  font-size: 12px;

  padding-left: 5px;
  padding-right: 5px;  

  font-weight: 300;
  margin-left: 5px;
  transition: 0.3s margin-left, 0.3s opacity;
}

span.app-title-detail-hide {
  width: 0px;
  overflow: hidden;
  margin-left: 0px;
  padding: 0px;
  visibility: hidden;
}

div.play-button-box {
  position: absolute;
  left: 10px;
  top: 8px;
  width: 26px;
  height: 26px;
  cursor: pointer;
}

div.share-button-box {
  position: absolute;
  right: 0px;
  top: 5px;
  width: 35px;
  cursor: pointer;
}

div.play-button-box img {
  height: 22px;
}

div.share-button-box img {
  height: 25px;
}

div.entity-box {
  position: relative;
}

div.result-box {
  position: relative;
}

/* UI elements */

div.entity-tree {
  background-color: #13151A;
  width: 100%;
  height: 100%;
  overflow: auto;
}

text.entity-tree-text {
  fill: #DDE0E6;
  cursor: pointer;
}

text.entity-tree-text:hover {
  fill: #fff;
}

text.entity-tree-text-select {
  fill: #fff;
}

image.entity-tree-icon {
  cursor: pointer;
  width: 15px;
  height: 15px;
  opacity: 0.7;
}

image.entity-tree-icon:hover {
  opacity: 1.0;
}

rect.entity-tree-select {
  fill: #13151A;
  border-radius: 2px;
  cursor: pointer;
}

rect.entity-tree-selected {
  fill: #333A4B;
}

/* -- begin of inspector -- */
div.inspector  {
  padding: 5px;
}

div.inspector-name {
  display: flex;
  flex-direction: row;
  align-items: center;
  cursor: default;
}

div.inspector-icon {
  display: flex;
  width: 15px;
}

div.inspector-components {
  display: flex;
  flex-direction: column;
}
/* ... */

